<resources>
    <string name="app_name">For Vacation</string>
    <string name="info"> <b>Общая информация: </b></string>
    <string name="working_hours"> <b>Время работы: </b></string>
    <string name="price"> <b>Цена входного билета:</b></string>
    <string name="map"> <b>Карта местности:</b> </string>
    <string name="transport"> <b>Траспорт:</b> </string>
    <string-array name="sightseeing_greece">
        <item>Афинский акрополь (г. Афины)</item>
        <item>Панатинайкос (г. Афины)</item>
        <item>Храм Зевса Олимпийского (г. Афины)</item>
        <item>Львиные ворота (г. Микены)</item>
        <item>Древняя Олимпия (полуостров Пелопоннес)</item>
        <item>Гора Олимп (область Фессалия)</item>
        <item>Дворец Великих Магистров (остров Родос)</item>
        <item>Древнегреческий город Дельфы (область Фокида)</item>
        <item>Древний город Мистра (г. Спарта)</item>
        <item>Акрополь Линдоса (г. Линдос)</item>
        <item>Метеоры</item>
        <item>Загори</item>
        <item>Пелопоннес</item>
        <item>регион Македония</item>
        <item>город Эпил (скалы)</item>
    </string-array>
    <string name="Acropolis_of_Athens">
        Афинский некроволь, также известный как афинская некроволь или некровольный союз, был создан
        в древней Греции в V веке до н. э. и являлся формой политического и военного союза между
        город-государствами Афин и их союзниками. Он отличался от других форм греческих союзов тем,
        что не предусматривал обязательного вступления новых членов и не требовал от своих участников
        платить взносы или посылать военные отряды.

        Афинский некроволь был создан в ответ на угрозу персидской империи, которая покушалась на
        греческие города-государства. Афины, ставшие лидером этого союза, предложили своим союзникам
        защиту от персидской агрессии и обещали отстаивать их независимость и свободу. Союз состоял
        из более чем 150 городов, преимущественно на территории современной Греции, и был одним из
        крупнейших и наиболее влиятельных политических союзов древнего мира.

        Однако афинский некроволь имел и свои недостатки. Афины были доминирующей силой в этом союзе
        и использовали его в своих интересах. Они контролировали финансы союза и силы его флота, а
        также вмешивались во внутренние дела своих союзников. Афины также предлагали союзникам вариант
        выплачивать им деньги вместо обязательной службы военных отрядов, что вызывало недовольство
        и протесты со стороны некоторых союзников.

        Афинский некроволь существовал около 70 лет, но его доминирование и вмешательство во
        внутренние дела союзников вызвало недовольство, что привело к конфликту между Афинами и их
        союзниками. Этот конфликт, известный как Пелопоннесская война (431-404 гг. до н. э.),
        завершился поражением Афин и развалом афинского некроволя.
    </string>
    <string name="Panathenaic_Stadium">
        Панатинаикос стадион, также известный как Апостолос Николаидис, является футбольным стадионом,
        расположенным в Афинах, столице Греции. Он является домашней ареной для футбольного клуба
        Панатинаикос, одного из наиболее известных и успешных футбольных клубов в Греции.

        Стадион Панатинаикоса был открыт в 1922 году и является одним из старейших стадионов в
        Греции. Он расположен на улице Александрос Папагос, в центральной части Афин, и имеет
        вместимость около 16 000 зрителей.

        Панатинаикос стадион является историческим символом греческого футбола и футбольного клуба
        Панатинаикос. Он был местом проведения множества важных футбольных матчей, включая матчи
        национального первенства Греции и европейских турниров. Название стадиона "Апостолос
        Николаидис" дано в честь известного греческого футболиста и бывшего капитана Панатинаикоса,
        который считается одним из величайших футболистов Греции.

        Стадион Панатинаикоса также имеет богатую историю в проведении других спортивных мероприятий
        и культурных событий, таких как концерты и церемонии открытия и закрытия Олимпийских игр,
        которые проходили в Афинах в 2004 году.

        Однако стадион Панатинаикоса также имеет ограниченные возможности для модернизации, и
        существует планы на реконструкцию и модернизацию стадиона, чтобы соответствовать современным
        стандартам и требованиям футбольных мероприятий.
    </string>
    <string name="Temple_of_Olympian_Zeus">
        Строительство самого внушительного сооружения древнего мира — знаменитого храма Зевса
        Олимпийского — началось задолго до нашей эры по инициативе тогдашнего правителя Афин —
        тирана Писистрата. Планы у владыки были воистину амбициозными: новое гигантское сооружение
        должно было непременно затмить все существующие на то время чудеса света, в частности,
        непревзойденный храм Артемиды. В общем-то мечта Писистрата впоследствии осуществилась,
        только вот не при его жизни.

        В обществе затею с возведением самого большого в мире храма не оценили, сочтя ее просто
        актом высокомерия. А рядовые греки усматривали в храме лишь очевидный памятник тирании.
        Но между тем святость храма отрицать не приходилось, ведь он возводился на месте более
        древнего святилища Девкалиона — прототипа Ноя в греческой мифологии. Потому строительство
        храма Зевса Олимпийского хоть и с перерывами, но продолжалось.

        Завершил проект знаменитый воспеватель греческой культуры — император Адриан. С его легкой
        руки Афинская агора обзавелась не одним оригинальным шедевром архитектуры. Но время оказалось
        беспощадным. Храм Зевса Олимпийского просуществовал лишь три столетия (против шести веков
        строительных работ), прежде чем был основательно разрушен землетрясением.

        До настоящего времени от некогда великого храма сохранились лишь руины, впрочем, весьма
        впечатляющие. Хорошо просматривается угол помещения, состоящий из четырнадцати колон. Еще
        одна колонна стоит немного поодаль, и последняя — шестнадцатая — завалена. В оригинале же
        храм Зевса Олимпийского состоял более чем из сотни 17-метровых коринфских колон,
        расположенных в несколько рядов по периметру здания. Длина и ширина помещения составляла,
        соответственно, 96 м и 40 м.

        О внутреннем убранстве храма известно немного. Считается, что практически всю площадь зала
        занимала гигантская статуя бога Зевса, выполненная из слоновой кости и золота. Ходит легенда,
        что однажды сам Юлий Цезарь возжелал перевезти исполинскую скульптуру к себе в Рим, на что
        статуя лишь рассмеялась раскатистым громом. Кроме известного изваяния, зал храма Зевса
        Олимпийского украшала не менее впечатляющая статуя императора Адриана.

    </string>
    <string name="Mount_Olympus">
        Согласно греческой мифологии, гора Олимп - место, где Гея родила титанов. Они были так
        велики, что горы Греции служили им тронами, а Крон, самый могущественный из титанов,
        восседал на горе Олимп. Впоследствии Олимп стал местом, где жили древнегреческие боги.
        Согласно Гомеру, они обитали в хрустальных дворцах на вершине горы, питались нектаром и
        амброзией, «пищей богов», дарившей им бессмертие.

        Александр Македонский приезжал сюда перед началом военных походов, чтобы принести жертвы у
        подножия Олимпа.
        Олимп является не только историческим и мифологическим символом, но и памятником природы.
        Расположенный в пределах нома Пиерия и частично в пределах нома Лариса-Фессалия, Национальный
        заповедник Олимпа характеризуется огромным разнообразием флоры и фауны. Здесь встречаются
        1700 видов растений, что соответствует 25 % всех видов встречающихся в Греции. 23 из них —
        эндемичные виды, то есть обитающие только здесь. Фауна представлена 8 видами амфибий, 22
        видами пресмыкающихся, 32 видами диких млекопитающих, 136 видами птиц.

        Город Литохоро, что означает «Город богов» - обычное место начала любого восхождения на Олимп.
        На восхождение и спуск потребуется 2 дня - хотя опытные туристы могут обернуться за один день.
        Вдоль троп устроены приюты, где можно переночевать. Прекрасный район первозданной красоты.
        Здесь произрастают 1700 видов растений, причем некоторые встречаются только здесь.
    </string>
</resources>