<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sight_img"
        android:layout_width="wrap_content"
        android:layout_height="232dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/basilica_da_estrela" />

    <ScrollView
        android:id="@+id/scroll_bar"
        android:layout_width="409dp"
        android:layout_height="497dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sight_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/info"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sight_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/Temple_of_Olympian_Zeus"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/working_hours"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/price"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sight_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="12€"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/map"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="@string/transport"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sight_transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="false"
                android:fontFamily="@font/forum"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:text="Трамвай 1, 5, 15 – до остановки Макригианнис, автобусы 040, 230, 227, 790, А2, А3 – до остановки Макригианнис"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>